--- a/dh.cform.openvpn-ec2-pub.yaml
+++ b/dh.cform.openvpn-ec2-pub.yaml
@@ -48,7 +48,7 @@ Resources:
     CreationPolicy:
       ResourceSignal:    
         Count: 1
-        Timeout: "PT5M"
+        Timeout: "PT3M"
 #.............................
     Properties:
 #.............................
@@ -116,6 +116,9 @@ Resources:
           packages:
             yum:
               httpd: []
+              iptables-services: []
+          sources:
+            /tmp: "https://s3.eu-central-1.amazonaws.com/dh.scripts/iptables/dh.cform.openvpn-ec2-pub-iptables.tar.gz"
           files:
             "/var/www/html/index.html":
               content: !Sub |
@@ -123,10 +126,18 @@ Resources:
               mode: '000644'
               owner: root
               group: root
+          commands:
+            iptables:
+              cwd: "/tmp"
+              command: "chmod +x dh.cform.openvpn-ec2-pub-iptables.sh"
+              command: "/bin/bash dh.cform.openvpn-ec2-pub-iptables.sh"
           services:
             sysvinit:
               httpd:
                 enabled: true
+                ensureRunning: true
+              iptables:
+                enables: true
                 ensureRunning: true
 
 #-------------------------------------------
