--- a/dh.cform.openvpn-ec2-pub.yaml
+++ b/dh.cform.openvpn-ec2-pub.yaml
@@ -198,8 +198,23 @@ Resources:
               iptables-services: []
           sources:
             /tmp: "https://s3.eu-central-1.amazonaws.com/dh.scripts/iptables/dh.cform.openvpn-ec2-pub-iptables.sh.tar.gz"
+          files:
+            "/etc/sysctl.d/30-dh.iptables.conf":
+              content: |
+                net.ipv4.ip_forward = 1
+                net.ipv6.conf.default.disable_ipv6 = 1
+                net.ipv6.conf.all.disable_ipv6 = 1
+                kernel.randomize_va_space = 1
+                net.ipv4.conf.default.rp_filter = 1
+                net.ipv4.conf.all.rp_filter = 1
+                net.ipv4.tcp_syncookies = 1
+              mode: '000644'
+              owner: root
+              group: root
           commands:
-            iptables:
+            1_kernelParams:
+              command: "sysctl -p /etc/sysctl.d/30-dh.iptables.conf"
+            2_iptRules:
               cwd: "/tmp"
               command: "./dh.cform.openvpn-ec2-pub-iptables.sh"
           services:
@@ -213,7 +228,7 @@ Resources:
 #---------------------------
             "/etc/rsyslog.d/30-iptables.conf":
               content: |
-                :msg, startswith, "IPTlog" -/var/log/dh.vpn.svr.iptables.log
+                :msg, startswith, "IPTlog" -/var/log/dh.vpn.server.iptables.log
                 & stop
               mode: '000644'
               owner: root
@@ -221,7 +236,7 @@ Resources:
 #---------------------------
             "/etc/logrotate.d/dh.vpnlogs":
               content: |
-                /var/log/dh.vpn.svr.*.log
+                /var/log/dh.vpn.server.*.log
                 {
                  notifempty
                  rotate 21
@@ -296,46 +311,29 @@ Resources:
             yum:
               openvpn: []
           sources:
-            /etc/openvpn/server: "https://s3.eu-central-1.amazonaws.com/dh.scripts/openvpn/server/dh.vpn.svr.xxx1194.conf.tar.gz"
+            /etc/openvpn/server: "https://s3.eu-central-1.amazonaws.com/dh.scripts/openvpn/server/dh.vpn.server.xxx1194.conf.tar.gz"
           files:
-#---------------------------
-            "/etc/sysctl.d/30-dh.openvpn.conf":
-              content: |
-                net.ipv4.ip_forward = 1
-                net.ipv6.conf.default.disable_ipv6 = 1
-                net.ipv6.conf.all.disable_ipv6 = 1
-                kernel.randomize_va_space = 1
-                net.ipv4.conf.default.rp_filter = 1
-                net.ipv4.conf.all.rp_filter = 1
-                net.ipv4.tcp_syncookies = 1
-              mode: '000644'
-              owner: root
-              group: root
-#---------------------------
             "/usr/local/bin/vpn-server-status":
               content: |
                 #!/bin/bash
-                systemctl status openvpn-server@dh.vpn.svr.udp1194
-                systemctl status openvpn-server@dh.vpn.svr.tcp1194
-                journalctl -u openvpn-server@dh.vpn.svr.udp1194
-                journalctl -u openvpn-server@dh.vpn.svr.tcp1194
+                systemctl status openvpn-server@dh.vpn.server.udp1194
+                systemctl status openvpn-server@dh.vpn.server.tcp1194
+                journalctl -u openvpn-server@dh.vpn.server.udp1194
+                journalctl -u openvpn-server@dh.vpn.server.tcp1194
               mode: '000755'
               owner: ec2-user
               group: ec2-user
-#---------------------------
           commands:
-            1a_kernelParams:
-              command: "sysctl -p /etc/sysctl.d/30-dh.openvpn.conf"
-            2a_gen-HMAC:
+            1a_gen-HMAC:
               cwd: "/etc/openvpn/server"
               command: "openvpn --genkey --secret HMAC-sig.key"
-            2b_gen-HMAC:
+            1b_gen-HMAC:
               cwd: "/etc/openvpn/server"
               command: "aws s3 cp HMAC-sig.key s3://dh.scripts/openvpn/client/"
-            3_enableLogTimestamps:
+            2_enableLogTimestamps:
               cwd: "/usr/lib/systemd/system"
               command: "cp openvpn-server@.service openvpn-server@.service.bak;sed -i 's/ --suppress-timestamps//g' openvpn-server@.service"
-            4_addPATH:
+            3_addPATH:
               command: |
                 printf '\nPATH="/usr/local/bin:$PATH"\n' >> /home/ec2-user/.bashrc
           services:
@@ -343,8 +341,8 @@ Resources:
                 enables: true
                 ensureRunning: true
                 files:
-                  - "/etc/openvpn/server/dh.vpn.svr.udp1194.conf"
-                  - "/etc/openvpn/server/dh.vpn.svr.tcp1194.conf"
+                  - "/etc/openvpn/server/dh.vpn.server.udp1194.conf"
+                  - "/etc/openvpn/server/dh.vpn.server.tcp1194.conf"
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
         configEasyRSA:
@@ -352,7 +350,7 @@ Resources:
             yum:
               easy-rsa: []
           sources:
-            /usr/local/easy-rsa: "https://s3.eu-central-1.amazonaws.com/dh.scripts/easyrsa/openvpn/gen-reqs/dh.cform.easyrsa.vars.tar.gz"
+            /usr/local/easy-rsa: "https://s3.eu-central-1.amazonaws.com/dh.scripts/easyrsa/openvpn/gen-reqs/dh.easyrsa.openvpn.vars.tar.gz"
           commands:
             1a_initPKI:
               command: "cp -r /usr/share/easy-rsa/3/* /usr/local/easy-rsa/"
@@ -370,42 +368,34 @@ Resources:
               command: "cp dh.pem /etc/openvpn/server/"
             3a_genSVR:
               cwd: "/usr/local/easy-rsa"
-              command: "mv vars.dh.vpn.svr vars"
+              command: "mv vars.dh.vpn.server vars"
             3b_genSVR:
               cwd: "/usr/local/easy-rsa"
-              command: "./easyrsa gen-req dh.vpn.svr nopass"
+              command: "./easyrsa gen-req dh.vpn.server nopass"
             3c_genSVR:
               cwd: "/usr/local/easy-rsa/pki/private"
-              command: "cp dh.vpn.svr.key /etc/openvpn/server/"
-            3d_genSVR:
-              cwd: "/usr/local/easy-rsa/pki/reqs"
-              command: "aws s3 cp dh.vpn.svr.req s3://dh.scripts/easyrsa/openvpn/sign-reqs/"
+              command: "cp dh.vpn.server.key /etc/openvpn/server/"
             4a_genClnt1:
               cwd: "/usr/local/easy-rsa"
-              command: "mv vars.dh.vpn.client.pfSn-ravi vars"
+              command: "mv vars.dh.vpn.pfSn-ravi.client vars"
             4b_genClnt1:
               cwd: "/usr/local/easy-rsa"
-              command: "./easyrsa gen-req dh.vpn.client.pfSn-ravi nopass"
+              command: "./easyrsa gen-req dh.vpn.pfSn-ravi.client nopass"
             4c_genClnt1:
               cwd: "/usr/local/easy-rsa/pki/private"
-              command: "aws s3 cp dh.vpn.client.pfSn-ravi.key s3://dh.scripts/openvpn/client/"
-            4d_genClnt1:
-              cwd: "/usr/local/easy-rsa/pki/reqs"
-              command: "aws s3 cp dh.vpn.client.pfSn-ravi.req s3://dh.scripts/easyrsa/openvpn/sign-reqs/"
+              command: "aws s3 cp dh.vpn.pfSn-ravi.client.key s3://dh.scripts/openvpn/client/"
             5a_genClnt2:
               cwd: "/usr/local/easy-rsa"
-              command: "mv vars.dh.vpn.client.pfSn-virt vars"
+              command: "mv vars.dh.vpn.pfSn-virt.client vars"
             5b_genClnt2:
               cwd: "/usr/local/easy-rsa"
-              command: "./easyrsa gen-req dh.vpn.client.pfSn-virt nopass"
+              command: "./easyrsa gen-req dh.vpn.pfSn-virt.client nopass"
             5c_genClnt2:
               cwd: "/usr/local/easy-rsa/pki/private"
-              command: "aws s3 cp dh.vpn.client.pfSn-virt.key s3://dh.scripts/openvpn/client/"
-            5d_genClnt2:
+              command: "aws s3 cp dh.vpn.pfSn-virt.client.key s3://dh.scripts/openvpn/client/"
+            6a_mvReqs:
               cwd: "/usr/local/easy-rsa/pki/reqs"
-              command: "aws s3 cp dh.vpn.client.pfSn-virt.req s3://dh.scripts/easyrsa/openvpn/sign-reqs/"
-
-
+              command: "tar -zcf - *.req | aws s3 cp - s3://dh.scripts/easyrsa/openvpn/sign-reqs/dh.easyrsa.openvpn.sign-reqs.tar.gz"
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 
 
