--- a/openvpn-configs/dh.vpn.server.udp1194.conf
+++ b/openvpn-configs/dh.vpn.server.udp1194.conf
@@ -12,17 +12,17 @@ remote-cert-tls client
 tls-crypt HMAC-sig.key
 dh dh.pem
 ca ca.crt
-cert dh.vpn.svr.crt
-key dh.vpn.svr.key
+cert dh.vpn.server.crt
+key dh.vpn.server.key
 cipher AES-256-GCM
 auth SHA256
 user nobody
 group nobody
 verb 4
 mute 10
-log-append /var/log/dh.vpn.svr.udp1194.log
-status dh.vpn.svr.udp1194.status
-ifconfig-pool-persist dh.vpn.svr.udp1194.pool
+log-append /var/log/dh.vpn.server.udp1194.log
+status dh.vpn.server.udp1194.status
+ifconfig-pool-persist dh.vpn.server.udp1194.pool
 tls-cipher TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384
 explicit-exit-notify 3
 reneg-sec 3600
